--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=development
 PORT=3000
+# Local dev Mongo (use one OR the Atlas string below)
 MONGODB_URI=mongodb://localhost:27017/onelastai-dev
-# For Atlas usage replace above with your full SRV connection string and ensure IP allowlist.
+# Atlas example (DO NOT COMMIT real credentials):
+# MONGODB_URI=mongodb+srv://username:password@clusterhost.mongodb.net/onelastai?retryWrites=true&w=majority&appName=OneLastAI
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=devredis123
