--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1"
+  },
+  "optionalDependencies": {
+    "@mongodb-js/zstd": "^2.0.0",
+    "snappy": "^7.2.2"
   }
 }
