--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "spark-template",
+    "name": "onelastai",
+    "description": "OneLast AI platform frontend (React 19 + Vite + Tailwind)",
     "private": true,
     "version": "0.1.1",
     "type": "module",
@@ -18,10 +19,9 @@
         "env:validate": "node scripts/validate-env.js",
         "docker:build": "docker build -t onelastai:latest .",
         "docker:run": "docker run -p 3000:80 onelastai:latest",
-        "docker:prod": "docker-compose -f docker-compose.prod.yml up -d"
+    "docker:prod": "docker-compose up -d"
     },
     "dependencies": {
-        "@github/spark": "^0.0.1",
         "@heroicons/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
         "@octokit/core": "^6.1.4",
@@ -99,6 +99,9 @@
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.38.0",
         "vite": "^6.3.5"
+    },
+    "engines": {
+        "node": ">=20 <21"
     },
     "workspaces": {
         "packages": [
