--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,12 @@
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "helmet": "^8.1.0",
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.1"
   },
   "optionalDependencies": {
     "@mongodb-js/zstd": "^2.0.0",
