chore(structure): extract frontend into dedicated workspace and add monorepo setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   # Frontend Application
   onelastai-frontend:
     build:
-      context: .
+      context: ./frontend
       dockerfile: Dockerfile
       args:
         VITE_APP_API_BASE_URL: http://onelastai-backend:3000
