Initial commit - full setup by 1-manarmy

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "github.copilot",
         "docker.labs-ai-tools-vscode",
-        "docker.docker"
+        "docker.docker",
+        "visualstudioexptteam.intellicode-api-usage-examples"
     ]
 }
